WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
71349
[EFL] Fix build break when DEBUG_MEM_LEAKS is enabled.
https://bugs.webkit.org/show_bug.cgi?id=71349
Summary
[EFL] Fix build break when DEBUG_MEM_LEAKS is enabled.
Ryuan Choi
Reported
2011-11-02 00:09:07 PDT
Patch will be added.
Attachments
Patch
(4.61 KB, patch)
2011-11-02 00:12 PDT
,
Ryuan Choi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryuan Choi
Comment 1
2011-11-02 00:12:11 PDT
Created
attachment 113280
[details]
Patch
WebKit Review Bot
Comment 2
2011-11-02 01:44:06 PDT
Comment on
attachment 113280
[details]
Patch Clearing flags on attachment: 113280 Committed
r99046
: <
http://trac.webkit.org/changeset/99046
>
WebKit Review Bot
Comment 3
2011-11-02 01:44:11 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug